# audiograter

./: Cargo.toml  PKGBUILD  changelog.md  contributing.md  readme.md
.cargo/: config
etc/: audiograter.desktop
src/: dft.rs  main.rs
