[package]
name = "audiograter"
version = "1.3.0"
license = "GPL-3.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
edition = "2021"

[dependencies]
cairo-rs   = "0.18.2"
claxon     = "0.4.2"
gdk        = "0.18.0"
gdk-pixbuf = "0.18.0"
gio        = "0.18.2"
glib       = "0.18.2"
gtk        = "0.18.1"
pango      = "0.18.0"
pangocairo = "0.18.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
